# weak

./: .gitignore  LICENSE  README.md  main.py  poiseuille.h5  poiseuille.xdmf  pyproject.toml
src/: weak_form.py
src/integral/: integral.py
src/integral/util/: util.py
src/integral/util/dimensions/: dimensions.py
src/preprocessing/: preprocessing.py
src/test/: main.py  poisson.py  stokes.py  test.py
src/util/: util.py
src/weakgen/: __init__.py  main.py  poisson.py  stokes  weak_form.py
src/weakgen/scripts/: __init__.py
src/weakgen/scripts/integral/: __init__.py  integral.py
src/weakgen/scripts/integral/util/: __init__.py  util.py
src/weakgen/scripts/integral/util/boundaries/: __init__.py  boundaries.py
src/weakgen/scripts/integral/util/dimensions/: __init__.py  dimensions.py
src/weakgen/scripts/integral/util/operators/: __init__.py  operators.py
src/weakgen/scripts/preprocessing/: __init__.py  preprocessing.py
src/weakgen/util/: __init__.py  util.py
test/: test.py
