[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weakgen"
version = "0.1.3"
authors = [
  { name="Dennis Mayer", email="d.mayer97@web.de" },
]
description = "Weak Form Generation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Denn1sMay/weak"